applications/homer/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homer
  labels:
    goldilocks.fairwinds.com/enabled: "true"
