applications/homer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homer
  namespace: homer
  labels:
    app: homer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homer
  template:
    metadata:
      labels:
        app: homer
    spec:
      containers:
      - name: homer
        image: b4bz/homer:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - name: www
          mountPath: "/www"
        resources:
          requests:
            memory: "64Mi"
            cpu: "5m"
      volumes:
      - name: config
        configMap:
          name: homer-config
      - name: www
        emptyDir: {}
