applications/homer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homer
  namespace: homer
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: homer
